--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,8 +14,7 @@ body {
     rgba(33, 33, 194, 1) 17%,
     rgba(0, 212, 255, 1) 100%
   );
-
- 
+  // background-image: url(../../img/weather/As-Above-So-Below-2560x1600.jpg)
 }
 
 .weather {
