--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,18 +6,26 @@
 }
 
 body {
-  height:100vh;
-  background: rgb(35, 28, 154);
-  background: linear-gradient(
-    0deg,
-    rgba(35, 28, 154, 1) 0%,
-    rgba(33, 33, 194, 1) 17%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  // height:100vh;
+  // background: rgb(35, 28, 154);
+  // background: linear-gradient(
+  //   0deg,
+  //   rgba(35, 28, 154, 1) 0%,
+  //   rgba(33, 33, 194, 1) 17%,
+  //   rgba(0, 212, 255, 1) 100%
+  // );
   // background-image: url(../../img/weather/As-Above-So-Below-2560x1600.jpg)
 }
 
+.bgVideo{
+  position: relative;
+  z-index: -9999;
+}
+
+
 .weather {
+  position: absolute;
+  z-index: 1;
   box-shadow: 6px 6px 17px 7px rgba(12, 55, 88, 0.2);
   background: linear-gradient(
     0deg,
@@ -34,10 +42,8 @@ body {
   
   width: 60%;
   height: 480px;
-  
-  margin: 0vh auto;
-  
-  margin-top:20vh;
+  top:25%;
+  left:22.1%
 }
 
 .time {
