--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -10,6 +10,67 @@
   z-index: -9999;
 }
 
+.preloader__window {
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+}
+.preloader__window h3 {
+  text-align: center;
+  font-size: 24px;
+}
+
+.preloader-remove {
+  display: none;
+}
+
+.preloader-5 {
+  display: block;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 20% auto;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #337ab7;
+  animation: preloader-5-spin 2s linear infinite;
+}
+
+.preloader-5:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #bfe2ff;
+  animation: preloader-5-spin 3s linear infinite;
+}
+
+.preloader-5:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #337ab7;
+  animation: preloader-5-spin 1.5s linear infinite;
+}
+
+@keyframes preloader-5-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .weather {
   position: absolute;
   z-index: 1;
