--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -124,7 +124,12 @@
 
 .temperature__number {
   font-size: 56px;
-  padding: 0rem 0rem 4rem 0rem;
+  padding: 0rem 0rem 1rem 0rem;
+}
+
+.feels_like {
+  font-size: 15px;
+  padding: 0rem 0rem 2rem 0rem;
 }
 
 .condition {
