--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -7,7 +7,7 @@
 
 .bgVideo {
   position: relative;
-  z-index: -9999;
+  z-index: -99999;
 }
 
 .preloader__window {
@@ -15,6 +15,7 @@
   background: white;
   width: 100%;
   height: 100%;
+  z-index: 99999;
 }
 .preloader__window h3 {
   text-align: center;
@@ -85,9 +86,39 @@
   left: 21.1%;
 }
 
+.timeAndSearch {
+  display: flex;
+}
+
 .time {
+  margin-left: 42%;
   padding: 2rem 0em 0rem 0em;
   font-size: 60px;
+}
+
+.search__input {
+  margin: 3.2em 0em 0em 12em;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  opacity: 0.6;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #bdbdbd;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.search__img {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  margin: 3.6em 0em 0em -2em;
+  opacity: 0.6;
 }
 
 .location {
@@ -108,7 +139,6 @@
   width: 190px;
   height: 190px;
   float: right;
-  opacity: 0.6;
 }
 
 .temperature {
