--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,11 +5,6 @@
   font-family: "Mulish", sans-serif;
 }
 
-body {
- 
-
-}
-
 .bgVideo {
   position: relative;
   z-index: -99999;
@@ -20,7 +15,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 99999;
-  h3{
+  h3 {
     text-align: center;
     font-size: 24px;
   }
@@ -88,18 +83,16 @@ body {
   top: 15%;
   left: 21.1%;
 }
-.timeAndSearch{
+.timeAndSearch {
   display: flex;
 }
 .time {
-  margin-left:42%;
+  margin-left: 42%;
   padding: 2rem 0em 0rem 0em;
   font-size: 60px;
 }
-.search__input{
-  // display: block;
+.search__input {
   margin: 3.2em 0em 0em 12em;
-  
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-family: inherit;
@@ -107,36 +100,29 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  opacity: .6;
+  opacity: 0.6;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #bdbdbd;
   border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out ;
-  
-  
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.search__img{
+.search__img {
   width: 25px;
   height: 25px;
   position: absolute;
   margin: 3.6em 0em 0em -2em;
-  opacity: .6;
-
+  opacity: 0.6;
 }
 
 .location {
   display: flex;
   font-size: 40px;
-  // background:blue;
-  // justify-content:center;
   align-items: center;
 }
 
 .location__sity {
-  // white-space:nowrap;
   padding: 0rem 0rem 0rem 10rem;
-  // padding-right: 10rem;
 }
 .icon {
   width: 100%;
@@ -145,12 +131,7 @@ body {
     width: 190px;
     height: 190px;
     float: right;
-    // opacity: 0.6;
   }
-}
-
-.search__input{
- 
 }
 .temperature {
   display: flex;
@@ -165,7 +146,7 @@ body {
   font-size: 56px;
   padding: 0rem 0rem 1rem 0rem;
 }
-.feels_like{
+.feels_like {
   font-size: 15px;
   padding: 0rem 0rem 2rem 0rem;
 }
