--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -72,32 +72,49 @@
     transform: rotate(360deg);
   }
 }
+.leftBlockWeather {
+  width: 15%;
+  height: 80%;
+  box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
+  background: rgba(4, 201, 255, 0.5);
+  border-radius: 20px;
+}
+
+.downBlockWeather {
+  margin: 1em 1em 0em 1em;
+  width: 50vw;
+  height: 26vh;
+  background: red;
+  box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
+  background: rgba(4, 201, 255, 0.5);
+  border-radius: 20px;
+}
+
 .weather {
-  position: absolute;
+  margin: 0em 1em 0em 1em;
   z-index: 1;
-  box-shadow: 6px 6px 17px 7px rgba(12, 55, 88, 0.2);
+  box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   color: white;
   text-align: center;
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
-  width: 60%;
-  height: 480px;
-  top: 15%;
-  left: 21.1%;
+  width: 50vw;
+  height: 52vh;
 }
 
 .timeAndSearch {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .time {
-  margin-left: 43%;
-  padding: 2rem 0em 0rem 0em;
+  padding: 2rem 0em 0rem 3em;
   font-size: 60px;
 }
 
 .search__input {
-  margin: 3.2em 0em 0em 12em;
+  margin: 2em 0em 0em 50%;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-family: inherit;
@@ -117,7 +134,7 @@
   width: 25px;
   height: 25px;
   position: absolute;
-  margin: 3.6em 0em 0em -2em;
+  margin: -1.8% 0em 0em 10%;
   opacity: 0.6;
 }
 
@@ -125,6 +142,7 @@
   display: flex;
   font-size: 40px;
   align-items: center;
+  justify-content: center;
 }
 
 .location__sity {
@@ -153,4 +171,11 @@
 
 .condition {
   font-size: 20px;
+}
+
+.mainContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
