--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,148 +9,15 @@
   position: relative;
   z-index: -99999;
 }
-// preloader beginning
-.preloader__window {
-  position: absolute;
-  background: white;
-  width: 100%;
-  height: 100%;
-  z-index: 99999;
-  h3 {
-    text-align: center;
-    font-size: 24px;
-  }
-}
-.preloader-remove {
-  display: none;
-}
-.preloader-5 {
-  display: block;
-  position: relative;
-  width: 150px;
-  height: 150px;
-  margin: 20% auto;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #337ab7;
-  animation: preloader-5-spin 2s linear infinite;
-}
-.preloader-5:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  right: 5px;
-  bottom: 5px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #bfe2ff;
-  animation: preloader-5-spin 3s linear infinite;
-}
-.preloader-5:after {
-  content: "";
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-  border-radius: 50%;
-  border: 3px solid transparent;
-  border-top-color: #337ab7;
-  animation: preloader-5-spin 1.5s linear infinite;
-}
-@keyframes preloader-5-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-// preloader end
 
+@import "_preloader";
+@import "_leftBlockWeather";
+@import "_downBlockWeather";
+@import "_mainWeatherBlock";
 
-
-// left block weather
-
-.leftBlockWeather{
-
-}
-
-// left block weather end
-
-//main weather block
-.weather {
-  position: absolute;
-  z-index: 1;
-  box-shadow: 6px 6px 17px 7px rgba(12, 55, 88, 0.2);
-  color: white;
-  text-align: center;
-  background: rgb(4, 201, 255, 0.5);
-  border-radius: 20px;
-
-  width: 60%;
-  height: 480px;
-  top: 15%;
-  left: 21.1%;
-}
-.timeAndSearch {
+.mainContainer{
   display: flex;
-}
-.time {
-  margin-left: 43%;
-  padding: 2rem 0em 0rem 0em;
-  font-size: 60px;
-}
-.search__input {
-  margin: 3.2em 0em 0em 12em;
-  height: calc(2.25rem + 2px);
-  padding: 0.375rem 0.75rem;
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  opacity: 0.6;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #bdbdbd;
-  border-radius: 0.25rem;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-.search__img {
-  width: 25px;
-  height: 25px;
-  position: absolute;
-  margin: 3.6em 0em 0em -2em;
-  opacity: 0.6;
-}
-.location {
-  display: flex;
-  font-size: 40px;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
-.location__sity {
-  padding: 0rem 0rem 0rem 10rem;
-}
-.icon {
-  width: 100%;
-  padding: 0rem 10rem 0rem 0rem;
-  img {
-    width: 190px;
-    height: 190px;
-    float: right;
-  }
-}
-.temperature__number {
-  font-size: 56px;
-  padding: 0rem 0rem 1rem 0rem;
-}
-.feels_like {
-  font-size: 15px;
-  padding: 0rem 0rem 2rem 0rem;
-}
-.condition {
-  font-size: 20px;
-}
-//main weather block end 
