--- a/scss/_leftBlockWeather.scss
+++ b/scss/_leftBlockWeather.scss
@@ -1,5 +1,5 @@
 .leftBlockWeather{
-    width: 15%;
+    width: 15vw;
     height: 80%;
     box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
     background: rgb(4, 201, 255, 0.5);
