--- a/scss/_mainWeatherBlock.scss
+++ b/scss/_mainWeatherBlock.scss
@@ -20,11 +20,11 @@
   }
   .time {
     // margin-left: 43%;
-    padding: 2rem 0em 0rem 3em;
+    padding: 2% 0em 0rem 25%;
     font-size: 60px;
   }
   .search__input {
-    margin: 2em 0em 0em 50%;
+    margin: -2.8% 0em 0em 15%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem;
     font-family: inherit;
@@ -34,7 +34,7 @@
     color: #212529;
     opacity: 0.6;
     background-color: #fff;
-    background-clip: padding-box;
+    // background-clip: padding-box;
     border: 1px solid #bdbdbd;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
