--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -73,7 +73,7 @@
   }
 }
 .leftBlockWeather {
-  width: 15%;
+  width: 15vw;
   height: 80%;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
@@ -84,7 +84,6 @@
   margin: 1em 1em 0em 1em;
   width: 50vw;
   height: 26vh;
-  background: red;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
@@ -109,12 +108,12 @@
 }
 
 .time {
-  padding: 2rem 0em 0rem 3em;
+  padding: 2% 0em 0rem 25%;
   font-size: 60px;
 }
 
 .search__input {
-  margin: 2em 0em 0em 50%;
+  margin: -2.8% 0em 0em 15%;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-family: inherit;
@@ -124,7 +123,6 @@
   color: #212529;
   opacity: 0.6;
   background-color: #fff;
-  background-clip: padding-box;
   border: 1px solid #bdbdbd;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -174,7 +172,10 @@
 }
 
 .mainContainer {
+  position: absolute;
   display: flex;
+  top: 8%;
+  left: 17%;
   align-items: center;
   justify-content: center;
   height: 100vh;
