--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,10 @@
 @import "_mainWeatherBlock";
 
 .mainContainer{
+  position: absolute;
   display: flex;
+  top: 8%;
+  left: 17%;
   align-items: center;
   justify-content: center;
   height: 100vh;
