--- a/scss/_mainWeatherBlock.scss
+++ b/scss/_mainWeatherBlock.scss
@@ -9,7 +9,7 @@
     border-radius: 20px;
   
     width: 50vw;
-    height: 52vh;
+    height: 460px;
     // top: 15%;
     // left: 21.1%;
   }
@@ -24,7 +24,7 @@
     font-size: 60px;
   }
   .search__input {
-    margin: -2.8% 0em 0em 15%;
+    margin: 10% 0em 0em 40%;
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem;
     font-family: inherit;
@@ -43,7 +43,7 @@
     width: 25px;
     height: 25px;
     position: absolute;
-    margin: -1.8% 0em 0em 10%;
+    margin: -2em 0em 0em 9.5em;
     opacity: 0.6;
   }
   .location {
