--- a/scss/_leftBlockWeather.scss
+++ b/scss/_leftBlockWeather.scss
@@ -1,6 +1,6 @@
 .leftBlockWeather{
-    width: 15vw;
-    height: 80%;
+    width: 15%;
+    height: 716px;
     box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
     background: rgb(4, 201, 255, 0.5);
     border-radius: 20px;
