--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -6,6 +6,8 @@
 }
 
 .bgVideo {
+  width: 100vw;
+  height: 100vh;
   position: relative;
   z-index: -99999;
 }
@@ -73,8 +75,8 @@
   }
 }
 .leftBlockWeather {
-  width: 15vw;
-  height: 80%;
+  width: 15%;
+  height: 716px;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
@@ -83,10 +85,38 @@
 .downBlockWeather {
   margin: 1em 1em 0em 1em;
   width: 50vw;
-  height: 26vh;
+  height: 240px;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
+}
+
+.weatherForecast {
+  display: flex;
+}
+.weatherForecast li {
+  list-style: none;
+  width: 120px;
+  height: 200px;
+  margin: 20px 10px 0px 10px;
+  text-align: center;
+}
+.weatherForecast li h4 {
+  font-size: 14px;
+  padding: 5px 0px 10px 0px;
+}
+.weatherForecast li p {
+  font-size: 12px;
+}
+.weatherForecast li img {
+  width: 100px;
+  height: 100px;
+}
+.weatherForecast li h5 {
+  font-size: 20px;
+}
+.weatherForecast li h6 {
+  font-size: 14px;
 }
 
 .weather {
@@ -98,7 +128,7 @@
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
   width: 50vw;
-  height: 52vh;
+  height: 460px;
 }
 
 .timeAndSearch {
@@ -113,7 +143,7 @@
 }
 
 .search__input {
-  margin: -2.8% 0em 0em 15%;
+  margin: 10% 0em 0em 40%;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-family: inherit;
@@ -132,7 +162,7 @@
   width: 25px;
   height: 25px;
   position: absolute;
-  margin: -1.8% 0em 0em 10%;
+  margin: -2em 0em 0em 9.5em;
   opacity: 0.6;
 }
 
@@ -174,9 +204,8 @@
 .mainContainer {
   position: absolute;
   display: flex;
-  top: 8%;
-  left: 17%;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
 }
