--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,8 @@
 }
 
 .bgVideo {
+  width: 100vw;
+  height: 100vh;
   position: relative;
   z-index: -99999;
 }
@@ -18,9 +20,8 @@
 .mainContainer{
   position: absolute;
   display: flex;
-  top: 8%;
-  left: 17%;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
 }
