Поправлено отображение внешнего вида экрана

--- a/scss/_downBlockWeather.scss
+++ b/scss/_downBlockWeather.scss
@@ -6,6 +6,7 @@
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgb(4, 201, 255, 0.5);
   border-radius: 20px;
+  color:white;
 }
 
 .weatherForecast{
