--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -6,9 +6,9 @@
 }
 
 .bgVideo {
-  width: 100vw;
   height: 100vh;
   position: relative;
+  overflow: hidden;
   z-index: -99999;
 }
 
@@ -89,6 +89,7 @@
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
+  color: white;
 }
 
 .weatherForecast {
