--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -82,6 +82,17 @@
   border-radius: 20px;
 }
 
+.wind__speed, .pressure_mm, .humidity {
+  height: 33%;
+  color: white;
+  text-align: center;
+}
+.wind__speed img, .pressure_mm img, .humidity img {
+  margin: 40px 0px 30px 0px;
+  width: 100px;
+  height: 100px;
+}
+
 .downBlockWeather {
   margin: 1em 1em 0em 1em;
   width: 50vw;
