--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -213,6 +213,24 @@
   font-size: 20px;
 }
 
+.selectCity {
+  display: none;
+}
+.selectCity li {
+  width: 90%;
+  margin: 1.5em auto;
+  border: 1px solid rgb(127, 135, 141);
+  text-align: left;
+  list-style-type: none;
+  padding: 1em;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.search__block {
+  display: block;
+}
+
 .mainContainer {
   position: absolute;
   display: flex;
