--- a/scss/_leftBlockWeather.scss
+++ b/scss/_leftBlockWeather.scss
@@ -1,21 +1,21 @@
 .leftBlockWeather{
-    width: 15%;
-    height: 716px;
+    width: 180px;
+    height: 80vh;
     box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
     background: rgb(4, 201, 255, 0.5);
     border-radius: 20px;
   }
 
   .wind__speed, .pressure_mm, .humidity{
-   
+   font-size: 14px;
     height: 33%;
     color: white;
     text-align: center;
     
     img{
-      margin:40px 0px 30px 0px;
-      width: 100px;
-      height: 100px;
+      margin:2em 0px 2em 0px;
+      width: 70px;
+      height: 70px;
     }
   }
 
