--- a/scss/_preloader.scss
+++ b/scss/_preloader.scss
@@ -2,8 +2,8 @@
 .preloader__window {
     position: absolute;
     background: white;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 99999;
     h3 {
       text-align: center;
@@ -18,7 +18,7 @@
     position: relative;
     width: 150px;
     height: 150px;
-    margin: 20% auto;
+    margin: 30vh auto;
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: #337ab7;
