--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -6,7 +6,8 @@
 }
 
 .bgVideo {
-  height: 100vh;
+  width: 100vw;
+  height: 110vh;
   position: relative;
   overflow: hidden;
   z-index: -99999;
@@ -15,8 +16,8 @@
 .preloader__window {
   position: absolute;
   background: white;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 99999;
 }
 .preloader__window h3 {
@@ -33,7 +34,7 @@
   position: relative;
   width: 150px;
   height: 150px;
-  margin: 20% auto;
+  margin: 30vh auto;
   border-radius: 50%;
   border: 3px solid transparent;
   border-top-color: #337ab7;
@@ -75,22 +76,23 @@
   }
 }
 .leftBlockWeather {
-  width: 15%;
-  height: 716px;
+  width: 180px;
+  height: 80vh;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
 }
 
 .wind__speed, .pressure_mm, .humidity {
+  font-size: 14px;
   height: 33%;
   color: white;
   text-align: center;
 }
 .wind__speed img, .pressure_mm img, .humidity img {
-  margin: 40px 0px 30px 0px;
-  width: 100px;
-  height: 100px;
+  margin: 2em 0px 2em 0px;
+  width: 70px;
+  height: 70px;
 }
 
 .downBlockWeather {
