--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,8 @@
 }
 
 .bgVideo {
-  // width: 100vw;
-  height: 100vh;
+  width: 100vw;
+  height: 110vh;
   position: relative;
   overflow:hidden;
   z-index: -99999;
