--- a/scss/_downBlockWeather.scss
+++ b/scss/_downBlockWeather.scss
@@ -1,33 +1,36 @@
-.downBlockWeather {
-  margin: 1em 1em 0em 1em;
-  width: 50vw;
-  height: 240px;
-
+#downBlockWeather {
+  margin:0;
+  margin-top:1em;
+  width: 100%;
+  // height: 200px;
+  background:red;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgb(4, 201, 255, 0.5);
   border-radius: 20px;
   color:white;
 }
 
-.weatherForecast{
-display: flex;
+#weatherForecast{
+  padding: 0;
+  width: 100%;
+
 li{
   list-style:none;
-  width: 120px;
-  height: 200px;
-  margin: 20px 10px 0px 10px ;
+  padding:0;
+  // margin: 1em 1em 0em 0em ;
   text-align: center;
   h4{
     font-size: 14px;
-    padding: 5px 0px 10px 0px;
+    padding: 1em 0em 0.1em 0em;
   }
   p{
     font-size: 12px;
+
   }
   img{
     // padding: 20px 0px 10px 0px;
-    width: 100px;
-    height: 100px;
+    // width: 100px;
+    // height: 100px;
   }
   h5{
     font-size: 20px;
