--- a/scss/_leftBlockWeather.scss
+++ b/scss/_leftBlockWeather.scss
@@ -1,14 +1,19 @@
-.leftBlockWeather{
-    width: 180px;
-    height: 80vh;
+#leftBlockWeather{
+    width: 100%;
+    height: 100%;
+    background:red;
     box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
-    background: rgb(4, 201, 255, 0.5);
+    // background: rgb(4, 201, 255, 0.5);
     border-radius: 20px;
+
   }
 
   .wind__speed, .pressure_mm, .humidity{
-   font-size: 14px;
     height: 33%;
+    h4{
+      font-size: 17px;
+    }
+
     color: white;
     text-align: center;
     
