--- a/scss/_mainWeatherBlock.scss
+++ b/scss/_mainWeatherBlock.scss
@@ -1,30 +1,37 @@
-.weather {
-    // position: absolute;
-    margin: 0em 1em 0em 1em;
+
+
+#weather {
+
+    padding: 0;
     z-index: 1;
     box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
     color: white;
-    text-align: center;
     background: rgb(4, 201, 255, 0.5);
     border-radius: 20px;
-  
-    width: 50vw;
-    height: 460px;
-    // top: 15%;
-    // left: 21.1%;
+
+    width: 100%;
+    margin: 0;
+
+
   }
   .timeAndSearch {
-    display: flex;
+    
     align-items: center;
-  justify-content: center;
+    justify-content: center;
+
+    position: relative;
+    width: 100%;
   }
   .time {
-    // margin-left: 43%;
-    padding: 2% 0em 0rem 25%;
     font-size: 60px;
+   
+  }
+  .search{
+    position: relative;
   }
   .search__input {
-    margin: 10% 0em 0em 40%;
+
+
     height: calc(2.25rem + 2px);
     padding: 0.375rem 0.75rem;
     font-family: inherit;
@@ -40,33 +47,34 @@
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
   .search__img {
+
     width: 25px;
     height: 25px;
     position: absolute;
-    margin: -2em 0em 0em 9.5em;
+    margin: 0.4em 0em 0em -2em;
     opacity: 0.6;
   }
   .location {
-    display: flex;
+
+
     font-size: 40px;
     align-items: center;
   justify-content: center;
+
   }
-  .location__sity {
-    padding: 0rem 0rem 0rem 10rem;
-  }
+ 
   .icon {
-    width: 100%;
-    padding: 0rem 10rem 0rem 0rem;
+
+
+
     img {
-      width: 190px;
-      height: 190px;
-      float: right;
+      width: 200px;
+      height: 200px;
+
     }
   }
   .temperature__number {
     font-size: 56px;
-    padding: 0rem 0rem 1rem 0rem;
   }
   .feels_like {
     font-size: 15px;
