--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -75,19 +75,21 @@
     transform: rotate(360deg);
   }
 }
-.leftBlockWeather {
-  width: 180px;
-  height: 80vh;
+#leftBlockWeather {
+  width: 100%;
+  height: 100%;
+  background: red;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
-  background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
 }
 
 .wind__speed, .pressure_mm, .humidity {
-  font-size: 14px;
   height: 33%;
   color: white;
   text-align: center;
+}
+.wind__speed h4, .pressure_mm h4, .humidity h4 {
+  font-size: 17px;
 }
 .wind__speed img, .pressure_mm img, .humidity img {
   margin: 2em 0px 2em 0px;
@@ -95,69 +97,67 @@
   height: 70px;
 }
 
-.downBlockWeather {
-  margin: 1em 1em 0em 1em;
-  width: 50vw;
-  height: 240px;
+#downBlockWeather {
+  margin: 0;
+  margin-top: 1em;
+  width: 100%;
+  background: red;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
   color: white;
 }
 
-.weatherForecast {
-  display: flex;
+#weatherForecast {
+  padding: 0;
+  width: 100%;
 }
-.weatherForecast li {
+#weatherForecast li {
   list-style: none;
-  width: 120px;
-  height: 200px;
-  margin: 20px 10px 0px 10px;
+  padding: 0;
   text-align: center;
 }
-.weatherForecast li h4 {
+#weatherForecast li h4 {
   font-size: 14px;
-  padding: 5px 0px 10px 0px;
+  padding: 1em 0em 0.1em 0em;
 }
-.weatherForecast li p {
+#weatherForecast li p {
   font-size: 12px;
 }
-.weatherForecast li img {
-  width: 100px;
-  height: 100px;
-}
-.weatherForecast li h5 {
+#weatherForecast li h5 {
   font-size: 20px;
 }
-.weatherForecast li h6 {
+#weatherForecast li h6 {
   font-size: 14px;
 }
 
-.weather {
-  margin: 0em 1em 0em 1em;
+#weather {
+  padding: 0;
   z-index: 1;
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   color: white;
-  text-align: center;
   background: rgba(4, 201, 255, 0.5);
   border-radius: 20px;
-  width: 50vw;
-  height: 460px;
+  width: 100%;
+  margin: 0;
 }
 
 .timeAndSearch {
-  display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  width: 100%;
 }
 
 .time {
-  padding: 2% 0em 0rem 25%;
   font-size: 60px;
 }
 
+.search {
+  position: relative;
+}
+
 .search__input {
-  margin: 10% 0em 0em 40%;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   font-family: inherit;
@@ -176,34 +176,23 @@
   width: 25px;
   height: 25px;
   position: absolute;
-  margin: -2em 0em 0em 9.5em;
+  margin: 0.4em 0em 0em -2em;
   opacity: 0.6;
 }
 
 .location {
-  display: flex;
   font-size: 40px;
   align-items: center;
   justify-content: center;
 }
 
-.location__sity {
-  padding: 0rem 0rem 0rem 10rem;
-}
-
-.icon {
-  width: 100%;
-  padding: 0rem 10rem 0rem 0rem;
-}
 .icon img {
-  width: 190px;
-  height: 190px;
-  float: right;
+  width: 200px;
+  height: 200px;
 }
 
 .temperature__number {
   font-size: 56px;
-  padding: 0rem 0rem 1rem 0rem;
 }
 
 .feels_like {
@@ -235,9 +224,22 @@
 
 .mainContainer {
   position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding-top: 15vh;
   height: 100vh;
   width: 100vw;
+}
+
+@media (max-width: 993px) {
+  .leftBlock {
+    display: none;
+  }
+  #downBlockWeather {
+    display: none;
+  }
+  #timeAndSearch {
+    margin: 0;
+  }
+  .preloader__window {
+    height: 120vh;
+  }
 }
