--- a/scss/_downBlockWeather.scss
+++ b/scss/_downBlockWeather.scss
@@ -3,7 +3,7 @@
   margin-top:1em;
   width: 100%;
   // height: 200px;
-
+  
   box-shadow: 6px 6px 17px 5px rgba(12, 55, 88, 0.2);
   background: rgb(4, 201, 255, 0.5);
   border-radius: 20px;
@@ -12,7 +12,9 @@
 
 #weatherForecast{
   padding: 0;
-  width: 100%;
+  // width: 100%;
+  // background:red;
+  margin: 0 auto;
 
 li{
   list-style:none;
@@ -36,7 +38,7 @@ li{
     font-size: 20px;
   }
   h6{
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 }
