--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,17 +28,50 @@
 }
 
 
-@media (max-width: 993px){
+@media (max-width: 993px) OR (max-height: 840px) {
   .leftBlock{
     display: none;
   }
-  #downBlockWeather{
-    display: none;
+  .downBlockWeather > .row{
+    display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+   height: 200px;
   }
+  .downBlockWeather > .row > .col-3{
+    display: inline-block;
+    
+  }
+  #weatherForecast{
+    li{
+      margin-left:1em;
+    }
+  }
+ 
+  
   #timeAndSearch{
     margin:0;
   }
   .preloader__window{
     height: 120vh;
   }
+  .search__img{
+    // margin: -2em 0em 0em 4em;
+  }
+  
 }
+@media (max-width: 767px){
+  
+  .search__img{
+    margin: 0.4em 0em 0em -2em;
+  }
+}
+
+@media (max-height: 848px){
+  
+  .mainContainer{
+    padding-top: 1em;
+    margin-bottom: 1em;
+  }
+}
+
