Пофикшены резко появившееся баги в верстке нижнего блока прогноза погода и в мобилной версии

--- a/scss/css/style.css
+++ b/scss/css/style.css
@@ -193,13 +193,9 @@
   font-size: 56px;
 }
 
-.feels_like {
-  font-size: 15px;
-  padding: 0rem 0rem 2rem 0rem;
-}
-
 .condition {
   font-size: 20px;
+  padding-bottom: 1em;
 }
 
 .selectCity {
@@ -227,7 +223,7 @@
   width: 100vw;
 }
 
-@media (max-width: 993px) or (max-height: 840px) {
+@media (max-width: 993px) {
   .leftBlock {
     display: none;
   }
@@ -237,11 +233,13 @@
     white-space: nowrap;
     height: 200px;
   }
-  .downBlockWeather > .row > .col-3 {
+  .downBlockWeather > .row > .weatherForecast__list {
     display: inline-block;
+    width: 25%;
   }
-  #weatherForecast li {
-    margin-left: 1em;
+  .icon img {
+    width: 180px;
+    height: 180px;
   }
   #timeAndSearch {
     margin: 0;
@@ -249,8 +247,14 @@
   .preloader__window {
     height: 120vh;
   }
+  .search__img {
+    margin: -2em 0em 0em 4em;
+  }
 }
 @media (max-width: 767px) {
+  #weatherForecast li {
+    margin-left: 1em;
+  }
   .search__img {
     margin: 0.4em 0em 0em -2em;
   }
