--- a/scss/_mainWeatherBlock.scss
+++ b/scss/_mainWeatherBlock.scss
@@ -76,12 +76,10 @@
   .temperature__number {
     font-size: 56px;
   }
-  .feels_like {
-    font-size: 15px;
-    padding: 0rem 0rem 2rem 0rem;
-  }
+
   .condition {
     font-size: 20px;
+    padding-bottom: 1em;
   }
 
   .selectCity{
